# network_live

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
network_live/: __init__.py  date.py  download_logs.py  huawei250_parser.py  physical_data.py  send_mail.py  sql.py
network_live/beeline/: __init__.py  beeline_main.py  gsm_nokia_parser.py  huawei_parser.py  lte_nokia_parser.py  nokia_utils.py  wcdma_nokia_parser.py
network_live/enm/: __init__.py  enm.py  enm_main.py  gsm_parser.py  lte_parser.py  nr_parser.py  parser_utils.py  wcdma_parser.py
network_live/enm/parser_utils/: __init__.py  pyproject.toml
network_live/oss/: __init__.py  gsm_parser.py  oss_main.py  oss_ssh.py  wcdma_parser.py
network_live/scripts/: __init__.py  update_beeline_huawei.py  update_beeline_huawei_wcdma.py  update_beeline_nokia_gsm.py  update_beeline_nokia_lte.py  update_beeline_nokia_wcdma.py  update_enm_gsm.py  update_enm_lte.py  update_enm_nr.py  update_enm_wcdma.py  update_network_live.py  update_oss_gsm.py  update_oss_wcdma.py  update_tele2_gsm.py  update_tele2_lte.py  update_tele2_wcdma.py  update_zte_gsm.py  update_zte_wcdma.py
network_live/tele2/: __init__.py  gu_parser.py  parser.py  tele2_main.py
network_live/zte/: __init__.py  parser.py  select_data.py  zte_main.py
tests/: read_enm_data.py  test_enm_gsm.py  test_enm_lte.py  test_enm_wcdma.py  test_huawei_parser.py  test_network_live.py  test_nokia_parser.py  test_oss_wcdma.py  test_tele2_gsm.py  test_tele2_lte.py  test_tele2_wcdma.py  test_wcdma_nokia_parser.py
tests/beeline_data/nokia_lte/: KAR_Factor_nL818GU21BK.xml
tests/enm_data/: bbu_ip.txt  bsc_id.txt  channel_group.txt  enodeb_id.txt  gsm_cells.txt  gsm_sites.txt  iublink.txt  lte_cells.txt  rnc_id.txt  site_names.txt  wcdma_cells.txt
tests/tele2_data/: .~lock.tele2_lte_log.csv#  tele2_lte_log.csv
